--- a/themes/hugo-base-theme/layouts/partials/footer.html
+++ b/themes/hugo-base-theme/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <ul class="list-inline">
-            <li><a href="http://twitter.com/hivemindatwork" class="icon-twitter icon-2x"></a></li>
+            <li><a href="http://twitter.com/ecomodeling" class="icon-twitter icon-2x"></a></li>
             <li><a href="http://github.com/japilo" class="icon-octocat icon-2x"></a></li>
         </ul>
         <hr>
